--- a/style.less
+++ b/style.less
@@ -2233,12 +2233,10 @@ body .main .ufld_icon_links {
 
 
     .widget {
-        background: transparent;
-        box-shadow: 0 0 0;
         max-width: 100%;
         width: 100%;
-        margin-bottom: 2em !important;
-        padding: 0;
+        vertical-align: top;
+        
         h2 {
             margin: 0 0 1em;
             border: 0;
@@ -2275,10 +2273,21 @@ body .main .ufld_icon_links {
         vertical-align: top;
 
         h2 {
-            padding: 0.6em 1em;
+            padding: 0 0 0.6em;
+            margin: 0 !important;
+            color: @primarycolor;
+            box-shadow: 0 0 0;
+            margin: 0;
+            border: 0;
+            background: transparent !important;
+            font-size: 1.6em;
+              
+            /* 
+               padding: 0.6em 1em;
             margin: 0!important;
             margin-bottom: 0.4em!important;
             font-size: 1.4em;
+            */
         }
 
     }
