--- a/style.less
+++ b/style.less
@@ -1454,7 +1454,7 @@ svg {
 
 /* Social Icons */
 
-.evo_container__footer .widget_core_user_links .ufld_icon_links {
+.secondary_area .widget_core_user_links .ufld_icon_links {
     text-align: center;
     a{
         margin: 0 2em;
@@ -2222,7 +2222,7 @@ body .main .ufld_icon_links {
 
 /* Secondary Area */
 
-.evo_container__footer {
+.secondary_area {
 
     z-index: 3;
     position: relative;
@@ -2399,7 +2399,7 @@ body .main .ufld_icon_links {
 
 /* Info Widgets Section */
 
-.evo_container__footer .info_section {
+.secondary_area .info_section {
     padding: 0em 0 2em;
 
     .widget {
@@ -3643,7 +3643,7 @@ div.action_messages, div.log_container {
 }
 
 // Positions on the action buttons near page titles
-.evo_post_title {
+.post_title {
     display: table;
     h2 {
         display: table-cell;
