--- a/style.less
+++ b/style.less
@@ -1261,6 +1261,21 @@ svg {
 
 
 
+.evo_container__front_page_primary {
+    float: left;
+    box-shadow: 0 2px 5px -1px rgba(0,0,0,.4);
+    padding: 2em;
+    background: @defaultcolor;
+    display: block;
+    margin-bottom: 1em!important;
+    
+    p {
+        color: #000;
+    }
+}
+
+
+
 /* Widget box style */  
 .widget_core_coll_tag_cloud,
 .widget_core_coll_xml_feeds,
